# PlatformerGameCpp

./: CMakeLists.txt  README.md  button.cpp  button.hpp  game_menu.hpp  main.cpp
gui/: button.cpp  button.hpp  game_menu.hpp  level-render-main.cpp  level.hpp  main.cpp
gui/assets/textures/misc/: reference.txt
gui/include/: button.hpp  gui-constants.hpp  level-render.hpp  menu.hpp  overlord.hpp  performer.hpp  scrollbar.hpp  statistics.hpp  textbox.hpp
gui/include/elements/: button.hpp  scrollbar.hpp  textbox.hpp
gui/include/windows/: level-editor.hpp  level-play.hpp  level-window.hpp  menu.hpp
gui/src/: button.cpp  level-render.cpp  menu.cpp  overlord.cpp  performer.cpp  scrollbar.cpp  statistics.cpp  textbox.cpp
gui/src/elements/: button.cpp  scrollbar.cpp  textbox.cpp
gui/src/windows/: level-editor.cpp  level-play.cpp  level-window.cpp  menu.cpp
model/: block.hpp  constants.hpp  empty.json  game.cpp  game.hpp  observers.hpp  player.cpp  player.hpp  player_fwd.hpp  testing.cpp  utilities.cpp  utilities.hpp
model/include/: block.hpp  board.hpp  constants.hpp  game.hpp  menu.hpp  model-constants.hpp  observers.hpp  player.hpp  player_fwd.hpp  utilities.hpp
model/levels/: deathbox.json  delala11sistr.json  editor-test.json  empty-level.json  empty.json  level 1.json  level 2.json  level 3.json  level 4.json  neydalatybu.json  t01-box-with-ladder.json  t02-hard-jumps.json
model/src/: block.cpp  board.cpp  game.cpp  menu.cpp  observers.cpp  player.cpp  utilities.cpp
model/statistics/: statistics.json
server/: CMakeLists.txt  client.cpp  client_source.hpp  json_file_exchange.proto  server.cpp  server_source.hpp  source.hpp
server/include/: client.hpp  json_file_exchange.proto  server.hpp  server_source.hpp  source.hpp
server/levels-client/: t01-box-with-ladder.json  test.json
server/levels-server/: t01-box-with-ladder.json
server/server_test_directory/: level 2.json
server/src/: client.cpp  server.cpp  source.cpp
tests/: doctest.h  tests.cpp
tests/levels/: killer-test.json  ladder-test.json  move-test.json  tramp-test.json
tools/: json.hpp  utilities.cpp  utilities.hpp
